--- a/tha2css.html
+++ b/tha2css.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tha devsnest</title>
-    
+    <title>Document</title>
 </head>
 <body>
     <h2>Sample Businees Latter</h2><br>
@@ -18,14 +17,11 @@
     <p>Rubble Road</p><br>
     <p>Rockville, IL 78777</p><br>
     <p>Dear Mr. Flintstone,</p><br>
-    <p>With reference to our ,</p>
-    <p style="background-color: greenyellow">telephone conversation today</p>
-    <p>I am to confirm your order for: 120 x Cheddar Deluxe Ref. No.</p>
+    <p style="text-decoration: underline; text-decoration-color: yellow;">With reference to our telephone conversation today, I am to confirm your order for: 120 x Cheddar Deluxe Ref. No.</p><br>
     <p>The order will be shipped within three days via UPS and arrive at your store in about 10 days.</p><br>
     <p>Please contact us again if we can help in any way.</p><br>
     <p>Yours sincerely,</p><br>
     <p>Kenneth Beare</p><br>
     <p>Director of Ken's Cheese House</p><br>
-    
 </body>
 </html>
